--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
+    "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
